force-app/main/default/objects/TV_Show__c/TV_Show__c.object-meta.xml
<CustomObject>
    <label>TV Show</label>
    <nameField>
        <label>TV Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TV Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>