force-app/main/default/objects/TV_Show__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>