force-app/main/default/objects/TV_Show__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Documentary</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Romantic</fullName>
            </value>
            <value>
                <fullName>Sci-Fi</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>