force-app/main/default/objects/TV_Show__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>