force-app/main/default/objects/TV_Show__c/fields/Number_Of_Episodes__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Episodes__c</fullName>
    <label>Number Of Episodes</label>
    <summaryForeignKey>Episode__c.TV_Show__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>