force-app/main/default/objects/TV_Show__c/fields/Trailer_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailer_URL__c</fullName>
    <label>Trailer URL</label>
    <type>Url</type>
</CustomField>