force-app/main/default/objects/TV_Show__c/validationRules/Unique_TV_Show_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_TV_Show_Name</fullName>
    <active>true</active>
    <errorConditionFormula>and(
    Name = VLOOKUP
       ($ObjectType.TV_Show__c.Fields.Name , $ObjectType.TV_Show__c.Fields.Name, Name ),

    not(
     Id=VLOOKUP
         ($ObjectType.TV_Show__c.Fields.Id , $ObjectType.TV_Show__c.Fields.Name, Name )))</errorConditionFormula>
    <errorMessage>Duplicate TV Show Name field detected. Such name is already in the system.</errorMessage>
</ValidationRule>